# MagBottleC

./: .gitignore  CMakeLists.txt  README.md
examples/example1-text/: CMakeLists.txt  example1.cpp
examples/example2-MinVR/: CMakeLists.txt  example2.cpp
examples/example2-MinVR/config/: desktop.xml  ivlabcave.xml  pyexample.xml
examples/example3-GLFW/: CMakeLists.txt  example3.cpp
include/: api.h
include/bfield/: BField_c.h  BObject_c.h  WireCoil_c.h
include/integrate/: gauss_legendre.h  numerical_int.h
include/particle/: Particle_c.h
include/testsuite/: testsuitetools.h  vectortoolstest.h
include/tools/: constsandtypes.h  vectortools.h
include/vis/: GLFW.h  ItemDraw_c.h  MinVR.h
src/: CMakeLists.txt  api.cpp
src/bfield/: BField_c.cpp  BObject_c.cpp  WireCoil.cpp  WireCoil.cpp~RF1feff9d.TMP  WireCoil_c.cpp  WireCoil_c.cpp~RF10ab07f.TMP  WireCoil_c.cpp~RFde45ab.TMP  WireCoil_c.cpp~RFf21d83.TMP
src/bfield/include/: BField.h  BField_c.h  BObject_c.h  WireCoil.h  WireCoil_c.h
src/examples/example1/: example1.cpp
src/examples/example2/: example2.cpp
src/gauss_legendre_int/: gauss_legendre.c  gauss_legendre.cpp
src/gauss_legendre_int_modified_for_MBC/: gauss_legendre.cpp  gauss_legendre.h
src/integrate/: gauss_legendre.c  numerical_int.h
src/particle/: Particle_c.cpp
src/particle/include/: Particle.h  Particle_c.h
src/testsuite/: TestSuite.cpp  _testsuitetools.cpp  vectortoolstest.cpp  vectortoolstest.cpp~RF37cabe.TMP  vectortoolstest.cpp~RF3cf7f6.TMP
src/testsuite/include/: testsuitetools.h
src/tools/: constsandtypes.cpp  vectortools.cpp
src/vectortools/: constsandtypes.cpp  vectortools.cpp  vectortools.cpp~RF4f898b.TMP
src/vectortools/include/: constsandtypes.h  vectortools.h
src/vis/: GLFW.cpp  ItemDraw_c.cpp  MinVR.cpp
src/vis/include/: ItemDraw_c.h  MinVR.h
testsuite/: CMakeLists.txt  TestSuite.cpp  testsuitetools.cpp  vectortoolstest.cpp
